--- a/package.json
+++ b/package.json
@@ -17,9 +17,14 @@
   },
   "homepage": "https://github.com/cinema6/showcase-marketing#readme",
   "devDependencies": {
+    "babel-preset-es2015": "^6.9.0",
     "grunt": "^1.0.1",
+    "grunt-babel": "^6.0.0",
     "grunt-contrib-connect": "^1.0.2",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-dev-server": "^0.1.0"
+  },
+  "dependencies": {
+    "babel": "^6.5.2"
   }
 }
