--- a/package.json
+++ b/package.json
@@ -2,7 +2,20 @@
   "name": "showcase-marketing",
   "version": "0.0.0",
   "description": "Marketing widgets for showcase",
-  "main": "src/index.js",
+  "main": "server/build/index.js",
+  "browserify": {
+    "transform": [
+      [
+        "babelify",
+        {
+          "presets": [
+            "es2015",
+            "react"
+          ]
+        }
+      ]
+    ]
+  },
   "scripts": {
     "test": "grunt test"
   },
@@ -18,13 +31,16 @@
   "homepage": "https://github.com/cinema6/showcase-marketing#readme",
   "devDependencies": {
     "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
+    "babelify": "^7.3.0",
     "grunt": "^1.0.1",
-    "grunt-babel": "^6.0.0",
+    "grunt-browserify": "^5.0.0",
     "grunt-contrib-connect": "^1.0.2",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-dev-server": "^0.1.0"
   },
   "dependencies": {
-    "babel": "^6.5.2"
+    "react": "^15.0.1",
+    "react-dom": "^15.0.1"
   }
 }
