--- a/package.json
+++ b/package.json
@@ -40,7 +40,10 @@
     "grunt-dev-server": "^0.1.0"
   },
   "dependencies": {
+    "es6-promise": "^3.2.1",
+    "isomorphic-fetch": "^2.2.1",
     "react": "^15.0.1",
-    "react-dom": "^15.0.1"
+    "react-dom": "^15.0.1",
+    "showcase": "git+https://github.com/cinema6/showcase.git"
   }
 }
