--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "dependencies": {
     "es6-promise": "^3.2.1",
     "isomorphic-fetch": "^2.2.1",
+    "lodash": "^4.13.1",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
     "showcase": "git+https://github.com/cinema6/showcase.git"
