--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "grunt": "^1.0.1",
     "grunt-browserify": "^5.0.0",
     "grunt-contrib-connect": "^1.0.2",
+    "grunt-contrib-uglify": "^1.0.1",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-dev-server": "^0.1.0"
   },
@@ -45,6 +46,7 @@
     "lodash": "^4.13.1",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
-    "showcase": "git+https://github.com/cinema6/showcase.git"
+    "showcase": "git+https://github.com/cinema6/showcase.git",
+    "showcase-core": "^1.3.0"
   }
 }
