--- a/package.json
+++ b/package.json
@@ -34,11 +34,14 @@
     "babel-preset-react": "^6.5.0",
     "babelify": "^7.3.0",
     "grunt": "^1.0.1",
+    "grunt-babel": "^6.0.0",
     "grunt-browserify": "^5.0.0",
+    "grunt-contrib-compress": "^1.3.0",
     "grunt-contrib-connect": "^1.0.2",
     "grunt-contrib-uglify": "^1.0.1",
     "grunt-contrib-watch": "^1.0.0",
-    "grunt-dev-server": "^0.1.0"
+    "grunt-dev-server": "^0.1.0",
+    "grunt-envify": "0.0.3"
   },
   "dependencies": {
     "es6-promise": "^3.2.1",
