--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "showcase-marketing",
   "version": "0.0.0",
   "description": "Marketing widgets for showcase",
-  "main": "server/build/index.js",
+  "main": "src/index.js",
   "browserify": {
     "transform": [
       [
