--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
         "lodash": "^4.13.1",
         "react": "^15.0.1",
         "react-dom": "^15.0.1",
-        "showcase": "git+https://github.com/cinema6/showcase.git",
+        "showcase": "cinema6/showcase",
         "showcase-core": "^1.3.0"
     }
 }
