--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babelify": "^7.3.0",
+    "envify": "^3.4.0",
     "eslint-plugin-react": "^5.1.1",
     "grunt": "^0.4.5",
     "grunt-babel": "^6.0.0",
