--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
     "showcase": "cinema6/showcase",
-    "showcase-core": "^1.3.0"
+    "showcase-core": "^1.3.0",
+    "classnames": "~2.2.5"
   }
 }
