--- a/email-service/package.json
+++ b/email-service/package.json
@@ -24,8 +24,7 @@
     "grunt": "^0.4.5",
     "grunt-contrib-jshint": "^1.0.0",
     "grunt-contrib-watch": "^1.0.0",
-    "grunt-jasmine-nodejs": "^1.5.3",
-    "required": "^1.0.0"
+    "grunt-jasmine-nodejs": "^1.5.3"
   },
   "dependencies": {
     "aws-sdk": "^2.1.39",
